--- a/index.html
+++ b/index.html
@@ -9,11 +9,38 @@
 </head>
 <body>
   <h1>Bot testing</h1>
+<div class="instructions">
+  <h3>For testing please follow next steps:</h3>
+  <ol>
+    <li>Import bot to your botpress server</li>
+    <li>Upload assets to your botpress server</li>
+      <ul>
+        <li>Open your bot from <em>Bots</em> page</li>
+        <li>
+          Click on <em>Code Editor</em> and change it to <em>Advanced</em>
+          <button data-step="step1Img">Toggle screenshot</button>
+          <img class="screenshot step1Img hidden" height="250" width="500" src="./screenshots/step_1.png" />
+        </li>
+        <li>
+          Click on 'Upload' button, choose your <b>mcdonalds_assistant.css</b> file and specify the following path: <b>assets/modules/channel-web/mcdonalds_assistant.css</b>
+          <button data-step="step2Img">Toggle screenshot</button>
+          <img class="screenshot step2Img hidden" height="250" width="500" src="./screenshots/step_2.png" />
+        </li>
+        <li>
+          Click on 'Upload' button, choose your <b>friesboxloader-cropped.gif</b> file and specify the following path: <b>assets/modules/channel-web/images/friesboxloader-cropped.gif</b>
+          <button data-step="step3Img">Toggle screenshot</button>
+          <img class="screenshot step3Img hidden" height="200" width="350" src="./screenshots/step_3.png" />
+        </li>
+      </ul>
+    <li>Run the botpress server locally / Make sure you have a botpress server deployed</li>
+    <li>Enter your host url in the input below and click 'Init bot'</li>
+  </ol>
 
 <form class="form">
-  <input type="url" class="inputHost" placeholder="Botpress host URL. e.g. http://localhost:3000" required/>
+  <input type="url" class="inputHost" value="http://localhost:3000/" placeholder="Botpress host URL. e.g. http://localhost:3000" required/>
   <button type="submit" class="initBtn">Init bot</button>
 </form>
+</div>
 
   <button class="btw-button-widget hidden">
     <span class="btw-button-widget__text">Talk to McDonald's Virtual Assistant</span>
@@ -23,6 +50,6 @@
   </button>
 
   <script src="http://localhost:3000/assets/modules/channel-web/inject.js"></script>
-  <script src="./script.js"></script>
+  <script type="module" src="./script.js"></script>
 </body>
 </html>
