--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   </ol>
 
 <form class="form">
-  <input type="url" class="inputHost" value="http://localhost:3000/" placeholder="Botpress host URL. e.g. http://localhost:3000" required/>
+  <input type="url" class="inputHost" placeholder="Botpress host URL. e.g. http://localhost:3000" required/>
   <button type="submit" class="initBtn">Init bot</button>
 </form>
 </div>
